add slippage costs

--- a/notebooks/rbpool_env.ipynb
+++ b/notebooks/rbpool_env.ipynb
@@ -165,6 +165,28 @@
     "        return Ain \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1_1\n",
+      "1_0.001\n",
+      "2_1\n",
+      "2_0.001\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in [1,2]:\n",
+    "    for b in [1, 1e-3]:\n",
+    "        print(f\"{a}_{b}\")"
+   ]
   }
  ],
  "metadata": {
