add simulation data path

--- a/notebooks/rbpool_env_v3.ipynb
+++ b/notebooks/rbpool_env_v3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,8 @@
     "            _wt = np.array([0.5]*len(weights_ytoken))\n",
     "        else:\n",
     "            print('no such smooth method')\n",
-    "        slippage = np.append([0], (_wt[:-1]/_wt[1:])**_wt[1:]*( (1-_wt[:-1])/(1-_wt[1:]))**(1-_wt[1:])-1)\n",
+    "        _wt_pad = np.append(0.5, _wt)    \n",
+    "        slippage = (_wt_pad[:-1]/_wt_pad[1:])**_wt_pad[1:]*((1-_wt_pad[:-1])/(1-_wt_pad[1:]))**(1-_wt_pad[1:])-1\n",
     "        # formate the output file as a dataframe for downstream analysis \n",
     "        _temp= np.column_stack((t, price, _wt, slippage))\n",
     "        out_vec = pd.DataFrame(_temp, columns = ['t', 'y_price', 'weights_ytoken', 'slippage_rebalance'])\n",
@@ -125,10 +126,10 @@
     "        return _wt_ma\n",
     "\n",
     "    def sm(self, wt, exp_w): \n",
-    "        assert 0<exp_w<1, 'smoothing weight must be between 0 and 1!'\n",
+    "        assert 0<=exp_w<=1, 'smoothing weight must be between 0 and 1!'\n",
     "        _wt_sm = []\n",
-    "        _w_padding = np.append(np.array(wt[0]), wt)\n",
-    "        _newwt = wt[0]\n",
+    "        _w_padding = np.append(0.5, wt)\n",
+    "        _newwt = 0.5\n",
     "        for i in range(len(wt)):\n",
     "            _newwt = _newwt*exp_w + _w_padding[i+1]*(1-exp_w)\n",
     "            _wt_sm.append(_newwt) \n",
@@ -138,14 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +166,6 @@
     "    y = V*((w_y/(w_x*p))**w_x)\n",
     "    x = V*((w_x*p)/w_y)**w_y\n",
     "    g = x + y*p \n",
-    "    _rebate = -slip*(rebate) + fee\n",
     "    #g_rebate= np.append(g[0], g[1:] + g[:-1]*(-slip[1:]*(rebate) + fee[1:]))\n",
     "    \n",
     "    df = pd.DataFrame(np.column_stack((x,y,V,g,_rebate)), columns = \n",
@@ -183,17 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get_episode_full(t,y_price_init, bs_vol, Growth_rate, Real_vol, Collateral, LTV0, fee_rate, rebate,\n",
-    "#                      pool_init_x, pool_init_y, pool_init_wx, 'SM', 0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,6 +424,29 @@
     "        out.append([_out.coll_with_rebate.values[-1], _out.pvtc_rebate.values[-1],_out.ltv_with_rebate.values.max()>1])\n",
     "\n",
     "    return np.array(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ltv_simulation_path(s, *args ):\n",
+    "    \"\"\"\n",
+    "        MC simualtion\n",
+    "            check the distribution of final pool value and risk of default \n",
+    "    \"\"\"\n",
+    "    out = []\n",
+    "    for k in range(0,s):\n",
+    "        _out = get_episode_full(t,y_price_init, bs_vol, Growth_rate, Real_vol, Collateral, LTV0, fee_rate, rebate,\n",
+    "                      pool_init_x, pool_init_y, pool_init_wx, args)\n",
+    "        _out['sim_id'] = int(k)\n",
+    "        if k== 0: \n",
+    "            out = _out\n",
+    "        else: \n",
+    "            out = pd.concat([out, _out])\n",
+    "    return out"
    ]
   }
  ],
